# filp

./: CHANGELOG.md  README.md  filp.cabal  stack.yaml
.stack-work/: stack.sqlite3
app/: Main.hs
data/: seed.sql
frontend/src/: App.css  App.jsx
frontend/src/components/: Auth.css  Auth.jsx  Cart.css  Cart.jsx  Header.css  Header.jsx  Orders.css  Orders.jsx  ProductCard.css  ProductCard.jsx  ProductList.css  ProductList.jsx
frontend/src/services/: api.js
migrations/: 001-initial-schema.sql
src/: Routes.hs
src/Database/: Connection.hs  Queries.hs
src/Logic/: Discount.hs  Filters.hs
src/Models/: Category.hs  Manufacturer.hs  Order.hs  Product.hs  Queries.hs  User.hs
